Bug 582485 - Remove history dropdown arrow behind back button r=gavin a=sdwilsh
UltraBlame original commit: 664dc9adfcf5e234a37191e5b606b7cefd1fd700

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -538,15 +538,6 @@ toolbar[mode="full"] .toolbarbutton-1 > .toolbarbutton-menubutton-button {
 }
 
 
-#back-forward-dropmarker {
-  width: 24px;
-}
-
-#back-forward-dropmarker > .toolbarbutton-menu-dropmarker {
-  width: 12px;
-}
-
-
 #back-button {
   list-style-image: url("moz-icon://stock/gtk-go-back-ltr?size=toolbar");
 }
